[gd_scene load_steps=5 format=3 uid="uid://dj1s8sae4nvfv"]

[ext_resource type="Script" uid="uid://blcdn7xs4d36y" path="res://_Scripts/CardScripts/SpecialCard/special_card.gd" id="1_yk1o5"]
[ext_resource type="Shader" uid="uid://cw0sk68bgeixc" path="res://Resources/Shaders/card_effect.gdshader" id="2_i6hg3"]
[ext_resource type="Theme" uid="uid://engys5p3iknv" path="res://Resources/Themes/label.tres" id="3_yk1o5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mol3j"]
shader = ExtResource("2_i6hg3")
shader_parameter/debug = false
shader_parameter/border_scale = 2.0
shader_parameter/shadow_offset = Vector2(0, -10)
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/blur_amount = 0.0
shader_parameter/shadow_scale = 1.5
shader_parameter/disable_rotating = false
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0
shader_parameter/hovering = 0.0
shader_parameter/rand_trans_power = 0.25
shader_parameter/rand_seed = 0.0
shader_parameter/vortex_amt = 0.0
shader_parameter/rotation = 0.0
shader_parameter/mouse_screen_pos_test = Vector2(0, 0)

[node name="SpecialCard" type="Button"]
custom_minimum_size = Vector2(100, 150)
anchors_preset = -1
anchor_right = 0.078125
anchor_bottom = 0.208333
flat = true
script = ExtResource("1_yk1o5")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_mol3j")
position = Vector2(50, 75)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = -57.0
offset_right = 103.0
offset_bottom = -4.0
theme = ExtResource("3_yk1o5")
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
